# HLib

./: .gitignore  CMakeLists.txt  README.md  cmakeconf.sh  qmakeconf.sh
src/: main.cpp
src/db/: dbmanager.cpp  dbmanager.h
src/gui/: imageview.cpp  imageview.h  logwindow.cpp  logwindow.h  mainwindow.cpp  mainwindow.h
src/gui/theme/: darkthemes.qrc
src/gui/ui/: logwindow.ui  mainwindow.ui  ui_logwindow.h  ui_mainwindow.h
src/utils/: logging.cpp  logging.h  utildefs.h  utilfuncs.cpp  utilfuncs.h
